style: author registration style

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 <section class="bg-white dark:bg-gray-900 mx-auto" style="margin-top: 200px">
   <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12" >
     <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-6xl dark:text-white">Seu gerenciamento mais fácil e seguro</h1>
-    <p class="mb-8 text-lg font-normal text-red-700 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">Mantenha o cadastro e gerenciamento dos seus livros sempre atualizados. Encontre tudo o que precisa para otimizar seu negócio</p>
+    <p class="mb-8 text-lg font-normal  lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">Mantenha o cadastro e gerenciamento dos seus livros sempre atualizados. Encontre tudo o que precisa para otimizar seu negócio</p>
     <div class="flex flex-col mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
       <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
         Ajuda no app
