--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -34,7 +34,7 @@
             <% @authors.each do |author| %>
               <tr class="bg-gray-800 border-gray-700 hover:bg-gray-600">
                 <td class="px-6 py-4 font-medium whitespace-nowrap text-white">
-                  <%= author.name %>
+                  <%= link_to author.name, author %>
                 </td>
                 <td class="px-6 py-4">
                   <%= author.nationality %>
@@ -46,7 +46,11 @@
                   <%= author.date_of_birth %>
                 </td>
                 <td class="px-6 py-4 text-right">
-                  <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                  <%= link_to edit_author_path(author) do %>
+                    <button type="button" class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800">
+                      Editar
+                    </button>
+                  <% end %>
                 </td>
               </tr>
             <% end %>
