--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,23 +1,23 @@
-<div class="flex items-center px-16 py-16">
+<div class="flex items-center rounded-[2.5rem] px-16 py-12 bg-gray-800">
   <div id="<%= dom_id book %>">
     <p class="my-5">
-      <strong class="block text-2xl mb-1">Título: <%= book.title %></strong>
+      <strong class="block text-white text-2xl mb-1">Título: <%= book.title %></strong>
     </p>
     <hr>
     <p class="my-5">
-      <strong class="block text-2xl font-medium mb-1">Autor: <%= book.author.name %></strong>
+      <strong class="block text-white text-2xl font-medium mb-1">Autor: <%= book.author.name %></strong>
     </p>
     <hr>
     <p class="my-5">
-      <strong class="block text-2xl font-medium mb-1">Gênero: <%= book.genre %></strong>
+      <strong class="block text-white text-2xl font-medium mb-1">Gênero: <%= book.genre %></strong>
     </p>
     <hr>
     <p class="my-5">
-      <strong class="block text-2xl font-medium mb-1">Data de publicação: <%= book.publication_date %></strong>
+      <strong class="block text-white text-2xl font-medium mb-1">Data de publicação: <%= book.publication_date %></strong>
     </p>
     <hr>
     <p class="my-5">
-      <strong class="block  text-2xl font-medium mb-1">ISBN: <%= book.isbn %></strong>
+      <strong class="block  text-white text-2xl font-medium mb-1">ISBN: <%= book.isbn %></strong>
     </p>
     </div>
   <div class="my-5 ml-6 border">
