--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,11 +1,20 @@
-<div class="mx-auto md:w-2/3 w-full h-full" style="overflow-y:hidden">
-  <div class="mx-auto mt-28 py-24 w-2/4 ">
+<div class="mx-auto md:w-2/3 w-full flex flex-col justify-center items-center mt-14 py-8">
+  <div class="mx-auto rounded-[2.5rem] mt-28 py-12 px-8 bg-gray-800">
     <% if notice.present? %>
       <p id="danger" class="p-4 relative bottom-6 text-sm text-green-800 rounded-lg bg-green-200 dark:bg-gray-800 dark:text-red-400" role="alert" data-controller="timeout"><%= notice %></p>
     <% end %>
 
     <%= render @author %>
-
+  </div>
+  <div class="text-center mt-4">
+    <%= link_to edit_author_path(@author) do %>
+      <button type="button" class="text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-6 py-2 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800">
+        Editar
+      </button>
+    <% end %>
+    <div class="inline-block ml-2">
+      <%= button_to "Excluir",@author, method: :delete, data: {controller: 'alert', action: 'click->alert#showAlert', alert_title_value: 'Você tem certeza?'}, class: "text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-6 py-2 text-center me-2 mb-2 dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-500 dark:focus:ring-red-800" %>
     </div>
-
+    <%= link_to "Voltar", authors_path, class:"text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-6 py-2 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800" %>
+  </div>
 </div>
