--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,8 +3,8 @@
     <%= render 'shared/custom_alert' %>
   <% end %>
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Livros</h1>
+  <div class="flex justify-between items-center mt-10">
+    <h1 class="font-bold text-blue-600 text-4xl">Livros</h1>
     <%= link_to "Novo livro", new_book_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
