feat: add supplier form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
     </div>
   </nav>
 
-  <main class="container mx-auto w-full">
+  <main class="container mx-auto flex-grow overflow-y-auto">
       <%= yield %>
   </main>
 
