--- a/app/views/suppliers/_form.html.erb
+++ b/app/views/suppliers/_form.html.erb
@@ -1,8 +1,7 @@
-<div class=" border border-blue-700 p-8 flex flex-col justify-center">
+<div class="border rounded-[2.5rem] border-blue-700 p-8 flex flex-col justify-center mt-28">
   <%= form_with(model: supplier, class: "contents") do |form| %>
     <% if supplier.errors.any? %>
       <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-
         <ul>
           <% supplier.errors.each do |error| %>
             <li><%= error.full_message %></li>
@@ -11,53 +10,59 @@
       </div>
     <% end %>
 
+    <% if action_name == "new" %>
+      <h1 class="font-bold text-4xl text-blue-600">Novo fornecedor</h1>
+    <% elsif action_name == "edit" %>
+      <h1 class="font-bold text-4xl text-blue-600">Editar fornecedor</h1>
+    <% end %>
 
-    <h1 class="font-bold text-4xl text-blue-600">Novo fornecedor</h1>
-    <div class="my-5">
-      <%= form.label :name %>
-      <%= form.text_field :name, class: "block shadow rounded-md border  outline-none px-3 py-2 mt-2 w-1/3" %>
-    </div>
-
-    <div class="my-5">
-      <%= form.label :address %>
-      <%= form.text_field :address, class: "block shadow rounded-md border  outline-none px-3 py-2 mt-2 w-1/3" %>
-    </div>
-
-    <div class="my-5">
-      <%= form.label :contact %>
-      <%= form.text_field :contact, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2 w-1/3" %>
-    </div>
-
-    <div class="my-5">
-      <%= form.label :cnpj %>
-      <%= form.text_field :cnpj, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2 w-1/3" %>
-    </div>
-
-    <div class="my-5 flex flex-col ">
-      <div class="">
-        <%= form.label :account, "Conta" %>
-        <%= form.text_field :account, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2 w-1/3" %>
+    <div class="grid grid-cols-2 gap-4 my-5">
+      <div class="flex flex-col">
+        <%= form.label :name, "Nome:" %>
+        <%= form.text_field :name, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
       </div>
-      <div>
-        <%= form.label :account_digit, "Dígito" %>
-        <%= form.text_field :account_digit, class: "block shadow rounded-md border outline-none  mt-2 w-10" %>
+
+      <div class="flex flex-col">
+        <%= form.label :address, "Endereço:" %>
+        <%= form.text_field :address, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
       </div>
-    </div>
 
-    <div class="my-5">
-      <%= form.label :account_type %>
-      <%= form.select :account_type, [%w[C/C C/C], %w[Poupança Poupança]], { prompt: "Selecione o tipo de conta" }, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2 w-1/3" %>
-    </div>
+      <div class="flex flex-col">
+        <%= form.label :contact, "Contato:" %>
+        <%= form.text_field :contact, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
+      </div>
 
-    <div class="my-5">
-      <%= form.label :bank %>
-      <%= form.text_field :bank, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2 w-1/3" %>
+      <div class="flex flex-col">
+        <%= form.label :cnpj, "CNPJ:" %>
+        <%= form.text_field :cnpj, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
+      </div>
+
+      <% if @supplier.account %>
+        <div class="flex flex-col">
+          <%= form.label :account, "Conta:" %>
+          <%= form.text_field :account, value: @supplier.account.account, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
+        </div>
+      <% end %>
+
+      <div class="flex flex-col w-10">
+        <%= form.label :account_digit, "Dígito:" %>
+        <%= form.text_field :account_digit, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
+      </div>
+
+      <div class="flex flex-col">
+        <%= form.label :account_type, "Tipo:" %>
+        <%= form.select :account_type, [%w[C/C C/C], %w[Poupança Poupança]], { prompt: "Selecione o tipo de conta" }, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
+      </div>
+
+      <div class="flex flex-col">
+        <%= form.label :bank, "Banco:" %>
+        <%= form.text_field :bank, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
+      </div>
     </div>
 
     <div class="inline mt-4">
-      <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
-      <%= link_to "Voltar", suppliers_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+      <%= form.submit @supplier.persisted? ? "Atualizar fornecedor" : "Criar Fornecedor", class: "mt-4 text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-6 py-3 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800" %>
+      <%= link_to "Voltar", suppliers_path, class: "mt-4 text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-6 py-3 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800" %>
     </div>
   <% end %>
 </div>
-
