--- a/app/views/suppliers/new.html.erb
+++ b/app/views/suppliers/new.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-auto md:w-2/3 w-full  " style="display: flex; flex-direction: column; justify-content: center; align-items: center">
+<div class="mx-auto md:w-2/3 w-full ">
 
   <%= render "form", supplier: @supplier %>
 
