--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <title>Livraria</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -12,11 +12,10 @@
 
   <body class="h-screen w-screen m-0 p-0 ">
 
-  <nav class="bg-white border-gray-200 dark:bg-gray-900">
-    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+  <nav class="w-full bg-white border-gray-200 dark:bg-gray-900 ">
+    <div class=" flex flex-wrap items-center justify-between  p-4">
       <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
-        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">book registration</span>
+        <span class="self-center text-blue-600 text-2xl font-semibold whitespace-nowrap dark:text-white">book registration</span>
       </a>
       <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
@@ -38,13 +37,10 @@
           <li>
             <a href="/suppliers" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Fornecedores</a>
           </li>
-          <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Peças</a>
-          </li>
-          <li>
+          <li >
             <%= form_tag(search_path, method: :get, class: "search-form") do %>
-              <%= text_field_tag :query, params[:query], placeholder: "Pesquisar" %>
-              <%= submit_tag "Pesquisar" %>
+              <%= text_field_tag :query, params[:query], placeholder: "Pesquisar", class: "rounded" %>
+              <%= submit_tag "Pesquisar", class: "text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-2 py-2 text-center me-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800" %>
             <% end %>
           </li>
         </ul>
@@ -52,12 +48,12 @@
     </div>
   </nav>
 
-  <main class="container mx-auto flex-grow overflow-y-auto">
+  <main id="mainContent" class="container mx-auto overflow-y-auto  ">
       <%= yield %>
   </main>
 
-  <footer class="fixed bottom-0 left-0 z-20 w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800 dark:border-gray-600">
-    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="https://flowbite.com/" class="hover:underline">BookRegistration™</a>. All Rights Reserved.
+  <footer id="footer" data-controller="footer" class="bottom-0 left-0 z-30 w-full p-4 bg-white border-t border-gray-200 shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-gray-800 dark:border-gray-600">
+    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>. All Rights Reserved.
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
       <li>
@@ -74,21 +70,7 @@
       </li>
     </ul>
   </footer>
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.turbo.min.js"></script>
   </body>
-
-
-
-
-
-
-
-
-
-
-
 </html>
 
 
