--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,23 +1,162 @@
-<% if @books.present? %>
-  <% @books.each do |book| %>
-    <%= book.title %>
-    <%= book.author.name %>
-    <!-- Outros atributos específicos para livros -->
+<div class="w-full  flex flex-col " style="height:80vh">
+  <% if @books.present? %>
+    <h2 class="font-bold text-blue-600 text-4xl">Livros</h2>
+    <div class="relative mt-6 overflow-x-auto shadow-md sm:rounded-lg">
+      <table class="w-full text-sm text-left rtl:text-right text-white dark:text-gray-400">
+        <thead class="text-xs uppercase bg-gray-700 text-gray-300">
+        <tr>
+          <th scope="col" class="px-16 py-3">
+            Título
+          </th>
+          <th scope="col" class="px-16 py-3">
+            Autor
+          </th>
+          <th scope="col" class="px-16 py-3">
+            Gênero
+          </th>
+          <th scope="col" class="px-16 py-3">
+            Data de publicação
+          </th>
+          <th scope="col" class="px-16 py-3">
+            ISBN
+          </th>
+          <!-- Adicione mais colunas se necessário -->
+        </tr>
+        </thead>
+        <tbody>
+        <% @books.each do |book| %>
+          <tr class="bg-gray-800 border-gray-700 hover:bg-gray-600">
+            <td class="px-8 py-4 font-medium whitespace-nowrap text-white">
+              <%= link_to book.title, book %>
+            </td>
+            <td class="px-16 py-4">
+              <%= book.author.name %>
+            </td>
+            <td class="px-16 py-4">
+              <%= book.genre %>
+            </td>
+            <td class="px-16 py-4">
+              <%= book.publication_date %>
+            </td>
+            <td class="px-16 py-4">
+              <%= book.isbn %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  <% elsif @authors.present? %>
+    <!-- Exibir resultados para autores -->
+    <h2 class="font-bold text-blue-600 text-4xl">Autores</h2>
+    <div class="relative overflow-x-auto mt-6 shadow-md sm:rounded-lg">
+      <table class="w-full text-sm text-left rtl:text-right text-white dark:text-gray-400">
+        <!-- Cabeçalhos para autores -->
+        <thead class="text-xs uppercase bg-gray-700 text-gray-300">
+        <tr>
+          <th scope="col" class="px-16 py-3">
+            Nome:
+          </th>
+          <th scope="col" class="px-16 py-3">
+            Nacionalidade:
+          </th>
+          <th scope="col" class="px-16 py-3">
+            Cpf:
+          </th>
+          <th scope="col" class="px-16 py-3">
+            Data de nascimento:
+          </th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @authors.each do |author| %>
+          <tr class="bg-gray-800 border-gray-700 hover:bg-gray-600">
+            <td class="px-16 py-4 font-medium whitespace-nowrap text-white">
+              <%= author.name %>
+            </td>
+            <td class="px-16 py-4 font-medium whitespace-nowrap text-white">
+              <%= author.nationality %>
+            </td>
+            <td class="px-16 py-4 font-medium whitespace-nowrap text-white">
+              <% cpf_object = CPF.new(author.cpf) %>
+              <span class="text-1xl text-gray-200"><%= cpf_object.formatted %></span>
+            </td>
+            <td class="px-16 py-4 font-medium whitespace-nowrap text-white">
+              <%= author.date_of_birth %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  <% elsif @suppliers.present? %>
+    <!-- Exibir resultados para fornecedores -->
+    <h2 class="font-bold text-blue-600 text-4xl">Fornecedores</h2>
+    <div class="relative mt-6 overflow-x-auto shadow-md sm:rounded-lg">
+      <table class="w-full text-sm text-left rtl:text-right text-white dark:text-gray-400">
+        <!-- Cabeçalhos para fornecedores -->
+        <thead class="text-xs uppercase bg-gray-700 text-gray-300">
+        <tr>
+          <th scope="col" class="px-8 py-3">
+            Nome:
+          </th>
+          <th scope="col" class="px-8 py-3">
+            Endereço:
+          </th>
+          <th scope="col" class="px-8 py-3">
+            Contato:
+          </th>
+          <th scope="col" class="px-8 py-3">
+            Cnpj:
+          </th>
+          <th scope="col" class="px-8 py-3">
+            Conta:
+          </th>
+          <th scope="col" class="px-8 py-3">
+            Dígito:
+          </th>
+          <th scope="col" class="px-8 py-3">
+            Tipo:
+          </th>
+          <th scope="col" class="px-8 py-3">
+            Banco:
+          </th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @suppliers.each do |supplier| %>
+          <tr class="bg-gray-800 border-gray-700 hover:bg-gray-600">
+            <td class="px-8 py-4 font-medium whitespace-nowrap text-white">
+              <%= supplier.name %>
+            </td>
+            <td class="px-8 py-4 font-medium whitespace-nowrap text-white">
+              <%= supplier.address%>
+            </td>
+            <td class="px-8 py-4 font-medium whitespace-nowrap text-white">
+              <%= supplier.contact %>
+            </td>
+            <td class="px-8 py-4 font-medium whitespace-nowrap text-white">
+              <%= supplier.cnpj%>
+            </td>
+            <td class="px-8 py-4 font-medium whitespace-nowrap text-white">
+              <%= supplier.account.account %>
+            </td>
+            <td class="px-8 py-4 font-medium whitespace-nowrap text-white">
+              <%= supplier.account.account_digit %>
+            </td>
+            <td class="px-8 py-4 font-medium whitespace-nowrap text-white">
+              <%= supplier.account.account_type %>
+            </td>
+            <td class="px-8 py-4 font-medium whitespace-nowrap text-white">
+              <%= supplier.account.bank%>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+    </div>
+  <% else %>
+    <p class="text-gray-600 mt-5">Nenhum resultado encontrado.</p>
   <% end %>
-<% elsif @authors.present? %>
-  <!-- Exibir resultados para autores -->
-  <% @authors.each do |author| %>
-    <!-- Exibir atributos específicos para autores -->
-    <%= author.name %>
-    <!-- Outros atributos específicos para autores -->
-  <% end %>
-<% elsif @suppliers.present? %>
-  <!-- Exibir resultados para fornecedores -->
-  <% @suppliers.each do |supplier| %>
-    <!-- Exibir atributos específicos para fornecedores -->
-    <%= supplier.name %>
-    <!-- Outros atributos específicos para fornecedores -->
-  <% end %>
-<% else %>
-  <p>Nenhum resultado encontrado.</p>
-<% end %>
+</div>
+
