--- a/app/views/suppliers/_form.html.erb
+++ b/app/views/suppliers/_form.html.erb
@@ -1,20 +1,34 @@
 <div class="border rounded-[2.5rem] border-blue-700 p-8 flex flex-col justify-center mt-28">
   <%= form_with(model: @supplier, class: "contents") do |form| %>
-    <% if @supplier.errors.any? %>
+    <% if @supplier.errors.any? || (@supplier.account && @supplier.account.errors.any?) %>
       <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
         <ul>
           <% @supplier.errors.each do |error| %>
             <% formatted_message = error.full_message %>
             <% if formatted_message.include?("Name") %>
               <% formatted_message = formatted_message.gsub("Name can't be blank", "Nome é obrigatório") %>
-            <% elsif  formatted_message.include?("Address") %>
+            <% elsif formatted_message.include?("Address") %>
               <% formatted_message = formatted_message.gsub("Address can't be blank", "Endereço é obrigatório") %>
-            <% elsif  formatted_message.include?("Contact") %>
+            <% elsif formatted_message.include?("Contact") %>
               <% formatted_message = formatted_message.gsub("Contact can't be blank", "Contato é obrigatório") %>
-            <% elsif  formatted_message.include?("Cnpj") %>
-              <% formatted_message = formatted_message.gsub("Cnpj can't be blank", "Cnpj é obrigatório") %>
-            <% elsif  formatted_message.include?("Cnpj") %>
+            <% elsif formatted_message.include?("Cnpj") %>
+              <% formatted_message = formatted_message.gsub("Cnpj can't be blank", "CNPJ é obrigatório") %>
+            <% elsif formatted_message.include?("Cnpj Deve ter 14 dígitos, somente números") %>
               <% formatted_message = formatted_message.gsub("Cnpj Deve ter 14 dígitos, somente números", "deve ter 14 dígitos, somente números") %>
+            <% elsif formatted_message.include?("Account account can't be blank") %>
+              <% formatted_message = formatted_message.gsub("Account account can't be blank", "Conta é obrigatória") %>
+            <% elsif formatted_message.include?("Account account is too short (minimum is 8 characters)") %>
+              <% formatted_message = formatted_message.gsub("Account account is too short (minimum is 8 characters)", "Mínimo 8 dígitos para a conta") %>
+            <% elsif formatted_message.include?("Account account digit can't be blank") %>
+              <% formatted_message = formatted_message.gsub("Account account digit can't be blank", "Dígito é obrigatório") %>
+            <% elsif formatted_message.include?("Account account digit não é válido.") %>
+              <% formatted_message = formatted_message.gsub("Account account digit não é válido.", "Dígito não é válido") %>
+            <% elsif formatted_message.include?("Account account digit não é válido.") %>
+              <% formatted_message = formatted_message.gsub("Account account digit não é válido.", "Dígito não é válido") %>
+            <% elsif formatted_message.include?("Account account type can't be blank") %>
+              <% formatted_message = formatted_message.gsub("Account account type can't be blank", "Tipo de conta é obrigatório") %>
+            <% elsif formatted_message.include?("Account bank can't be blank") %>
+              <% formatted_message = formatted_message.gsub("Account bank can't be blank", "Banco é obrigatório") %>
             <% end %>
             <li><%= formatted_message %></li>
           <% end %>
@@ -49,25 +63,25 @@
         <%= form.text_field :cnpj, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
       </div>
 
-      <% if @supplier.account %>
+      <%= form.fields_for :account do |account_form| %>
         <div class="flex flex-col">
-          <%= form.label :account, "Conta:" %>
-          <%= form.text_field :account, value: @supplier.account.account, maxlength: 10, pattern: "\d{8,10}", class: "block shadow rounded-md border outline-none px-3 py-2 mt-2", title: "A conta deve ter entre 8 e 10 dígitos" %>
+          <%= account_form.label :account, "Conta:" %>
+          <%= account_form.text_field :account, maxlength: 10, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2", title: "A conta deve ter entre 8 e 10 dígitos" %>
         </div>
 
         <div class="flex flex-col w-10">
-          <%= form.label :account_digit, "Dígito:" %>
-          <%= form.text_field :account_digit, value: @supplier.account.account_digit, maxlength: 1, pattern: "\d{1}", class: "block shadow rounded-md border outline-none px-3 py-2 mt-2", title: "O dígito deve ter 1 dígito" %>
+          <%= account_form.label :account_digit, "Dígito:" %>
+          <%= account_form.text_field :account_digit, maxlength: 1, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2", title: "O dígito deve ter 1 dígito" %>
         </div>
 
         <div class="flex flex-col">
-          <%= form.label :account_type, "Tipo:" %>
-          <%= form.select :account_type, options_for_select([['C/C', 'C/C'], ['Poupança', 'Poupança']], @supplier.account.account_type), { prompt: "Selecione o tipo de conta" }, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
+          <%= account_form.label :account_type, "Tipo:" %>
+          <%= account_form.select :account_type, options_for_select([['C/C', 'C/C'], ['Poupança', 'Poupança']], @supplier.account&.account_type), { prompt: "Selecione o tipo de conta" }, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
         </div>
 
         <div class="flex flex-col">
-          <%= form.label :bank, "Banco:" %>
-          <%= form.text_field :bank, value: @supplier.account.bank, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
+          <%= account_form.label :bank, "Banco:" %>
+          <%= account_form.text_field :bank, class: "block shadow rounded-md border outline-none px-3 py-2 mt-2" %>
         </div>
       <% end %>
     </div>
